# opencv-pg

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  modules.rst  opencv_pg.docs.rst  opencv_pg.models.rst  opencv_pg.rst  opencv_pg.views.rst  opencv_pg.views.widgets.rst
docs/source/sections/: adding_new.rst  development.rst  installation.rst  overview.rst  pipeline_backend.rst  usage.rst
src/opencv_pg/: __init__.py  doc_viewer.py  launcher.py  main.py  pipeline_launcher.py
src/opencv_pg/docs/: doc_writer.py
src/opencv_pg/docs/css/: styles.css
src/opencv_pg/docs/source_docs/: Canny.html  GaussianBlur.html  HoughCircles.html  HoughLines.html  HoughLinesP.html  Sobel.html  addWeighted.html  approxPolyDP.html  base.html  bilateralFilter.html  boxFilter.html  copyMakeBorder.html  cornerEigenValsAndVecs.html  cornerHarris.html  cornerSubPix.html  dilate.html  doc_template.html  error.html  fastNIMeansDenoisingColored.html  fillPoly.html  filter2D.html  findContours.html  getGaussianKernel.html  goodFeaturesToTrack.html  inRange.html  kmeans.html  (+9 more)
src/opencv_pg/models/: base_transform.py  cv2_constants.py  params.py  pipeline.py  support_transforms.py  table_model.py  transform_list_model.py  transform_windows.py  transforms.py  window.py
src/opencv_pg/views/: pipeline_window.py  playground.py
tests/test_models/: conftest.py  test_break_results_into_parts.py  test_pipeline.py  test_transform.py  test_window.py  transform_helpers.py
tests/test_transforms/: test_transforms.py
(+33 files in other folders)
